--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,79 @@
-input {
-    width: 200px;
+/* Generics */
+#button,
+#undo-button {
+    font-weight: bold;
+    color: #3d70fa;
+    font-size: 1.3rem;
+    padding: 0 15px;
+}
+
+#button:hover,
+#undo-button:hover {
+    color: green;
+    background-color: rgba(242, 195, 42, 0.2);
+    scale: 1.1;
+}
+
+/* Utils */
+.input-wrong {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right calc(.375em + .1875rem) center;
+    background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+    color: red;
+    font-size: 12px;
+}
+
+#inputKm.border-wrong,
+#inputName.border-wrong {
+    border: 2px solid red;
+}
+
+/* Form */
+form {
+    box-shadow: 0 0 20px black;
+}
+
+
+/* Ticket */
+
+#ticket {
+    box-shadow: 10px 10px black;
+}
+
+.ticket {
+    /* border: 1px solid grey;
+    border-right: 0; */
+}
+
+.ticket-body>ul {
+
+    padding-left: 0;
+}
+
+.ticket-body>ul>li:first-child {
+    background-color: grey;
+    padding: 0 1rem;
+}
+
+#ticket .ticket-body li {
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    border-right: 0;
+    padding: 1rem;
+}
+
+li p {
+    text-align: center;
+}
+
+.ticket-body h3,
+.ticket-body h5 {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+#output-name {
+    text-transform: capitalize;
+    font-weight: bold;
 }
